--- a/.github/workflows/rubocop.yml
+++ b/.github/workflows/rubocop.yml
@@ -1,55 +1,46 @@
+# CI action for running Rubocop, the Ruby style rule checker & linter
+#
 # rubocop.yml
+#
 # from https://github.com/actions/starter-workflows/blob/main/code-scanning/rubocop.yml
-name: Rubocop scan
+
 # TODO: Use the chef cookstyle rules as an alternative
+# TODO: upload to SonarQube by setting sonar.ruby.rubocop.reportPaths
+# https://docs.sonarsource.com/sonarqube-server/latest/analyzing-source-code/importing-external-issues/external-analyzer-reports/
 
-# NOT YET TESTED
+name: Rubocop scan
 
-name: "Rubocop"
 on:
-  push:
-    branches: [ $default-branch, $protected-branches ]
-  pull_request:
-    # The branches below must be a subset of the branches above
-    branches: [ $default-branch ]
-  schedule:
-    - cron: $cron-weekly
+  workflow_call:
 
 jobs:
-  rubocop:
-    runs-on: ubuntu-latest
+  test:
     strategy:
       fail-fast: false
-
+      matrix:
+        os: [ubuntu-latest, macos-latest]
+        # Due to https://github.com/actions/runner/issues/849, we have to use quotes for '3.0'
+        ruby: ['2.7', '3.1', '3.4']
+    runs-on: ${{ matrix.os }}
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-
-    # If running on a self-hosted runner, check it meets the requirements
-    # listed at https://github.com/ruby/setup-ruby#using-self-hosted-runners
-    - name: Set up Ruby
-      uses: ruby/setup-ruby@55283cc23133118229fd3f97f9336ee23a179fcf # v1.146.0
+    - uses: actions/checkout@v4
+    - uses: ruby/setup-ruby@v1
+      # follow instructions at https://github.com/marketplace/actions/setup-ruby-jruby-and-truffleruby & https://docs.github.com/en/actions/use-cases-and-examples/building-and-testing/building-and-testing-ruby
+      # not recommended to pin setup-ruby anymore - like uses: ruby/setup-ruby@55283cc23133118229fd3f97f9336ee23a179fcf # v1.146.0
       with:
-        ruby-version: 2.6
-
-    # This step is not necessary if you add the gem to your Gemfile
-    - name: Install Code Scanning integration
-      run: bundle add code-scanning-rubocop --version 0.3.0 --skip-install
-
-    - name: Install dependencies
-      run: bundle install
-
-    - name: Rubocop run
-      run: |
-        bash -c "
-          bundle exec rubocop --require code_scanning --format CodeScanning::SarifFormatter -o rubocop.sarif
-          [[ $? -ne 2 ]]
-        "
+        ruby-version: ${{ matrix.ruby }}
+        bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+    - run: bundle exec rake
+    - run: bundle install
+    # can also bundle exec rubocop
+    - name: Rubocop
+      run: rubocop --format CodeScanning::SarifFormatter -o rubocop.sarif
+      # other flags like -f github --display-cop-names --force-exclusion --parallel --cache false --out rubocop.json @ https://docs.rubocop.org/rubocop/usage/basic_usage.html#command-line-flags
+      # output formats @ https://docs.rubocop.org/rubocop/formatters.html
+      # rubocop rules are in something like .github/workflows/rubocop.yml or .rubocop.yml
 
     - name: Upload Sarif output
       uses: github/codeql-action/upload-sarif@v3
+      # https://docs.github.com/en/code-security/code-scanning/integrating-with-code-scanning/uploading-a-sarif-file-to-github
       with:
         sarif_file: rubocop.sarif
-
-# can up load to Sonar by setting sonar.ruby.rubocop.reportPaths
-# https://docs.sonarsource.com/sonarqube-server/latest/analyzing-source-code/importing-external-issues/external-analyzer-reports/
