--- a/.github/workflows/rubocop.yml
+++ b/.github/workflows/rubocop.yml
@@ -21,7 +21,7 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest]
         # Due to https://github.com/actions/runner/issues/849, we have to use quotes for '3.0'
-        ruby: ['2.7', '3.1', '3.4']
+        ruby: ['3.4'] # '2.7', '3.1', 
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v4
