--- a/.github/workflows/sonarqube-internal-repo.yml
+++ b/.github/workflows/sonarqube-internal-repo.yml
@@ -1,6 +1,8 @@
 # sonarqube-internal-repo.yml
 name: SonarQube scan for internal repositories
 # configuration @ https://github.com/marketplace/actions/official-sonarqube-scan
+# TODO: replace existing sonarqube.yml in PPS repos (like https://github.com/progress-platform-services/chef-node-enrollment-api/blob/main/.github/workflows/sonarqube.yml)
+# TODO: remove from PPS code gen, just use the stub
 
 on:
   workflow_call:
@@ -21,26 +23,40 @@ jobs:
         echo "Sonarqube scan for INTERNAL repositories, running on ubuntu-latest-4-cores runner"
         echo "Sonar host URL ${{ vars.SONAR_HOST_URL}}"
   #       echo "Skip unit tests set to ${{ inputs.skip-unit-tests }}"
-     
-  # unit-tests:
+  
+  sonarqube:
+    runs-on: ubuntu-latest-4-cores
+    steps:
+    # unit-tests:
   #   runs-on: ubuntu-latest
   #   if: ${{ inputs.skip-unit-tests == false }}
   #   steps:
   #   - name: Run unit tests
   #     run: | 
   #       echo "Running unit tests..."
-              
-
-  sonarqube:
-    runs-on: ubuntu-latest-4-cores
-    steps:
     - uses: actions/checkout@v4
       with:
         fetch-depth: 0
+
+    - name: Set up Go
+      uses: actions/setup-go@v4
+      with:
+        go-version: 1.23.6
+
+    - name: Configure git for private modules
+      env:
+        GOPRIVATE: github.com/progress-platform-services/*
+      run: git config --global url."https://${{ secrets.GH_TOKEN }}@github.com/".insteadOf "https://github.com/"
+
+    - name: Generate coverage files
+      run: go test -v -coverprofile="coverage.out" ./... 
+    - name: Copy file
+      run: mkdir -p test/coverage; cp coverage.out test/coverage/coverage.out          
+
     - name: SonarQube Scan
-      # if: always()
       uses: sonarsource/sonarqube-scan-action@v5.1.0
+      # was uses: sonarsource/sonarqube-scan-action@master
       continue-on-error: true
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+        SONAR_HOST_URL: ${{ vars.SONAR_HOST_URL }}    
