--- a/.github/workflows/blackduck-sca.yml
+++ b/.github/workflows/blackduck-sca.yml
@@ -13,7 +13,7 @@ on:
       # BLACKDUCK_URL: # required, but not used in this stub
 
 jobs:
-  build:
+  Blackduck-SCA:
     runs-on: [ ubuntu-latest ]
     steps:
       # - name: Checkout Source
